# Project51

./: Cargo.toml  README.md  rustfmt.toml
assets/prefab/: fly_camera.ron
assets/shaders/src/fragment/: custom.frag
assets/shaders/src/vertex/: custom.vert
config/: display.ron  input.ron
src/: block.rs  game_start.rs  main.rs  render_backend.rs  render_bundle.rs  render_cache.rs  render_graph.rs  render_macros.rs  render_material.rs  render_material_sub.rs  render_mesh.rs  render_pass.rs  render_plugins.rs  render_shader.rs  render_system.rs  render_vertex.rs  render_visibility.rs  render_voxel.rs  voxel.rs
src/bundles/: camera_control_bundle.rs  mod.rs
src/systems/: mod.rs  ui.rs  world_controls.rs
