[package]
name = "project51"
version = "0.0.1"
authors = []
edition = "2018"

[dependencies.amethyst]
version = "0.15.0"
features = ["metal"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
guard = "0.5.0"
shaderc = "0.6.2"
failure = "0.1.7"
log = "0.4.8"

[dependencies.derivative]
version = "2.1.1"

[dependencies.derive-new]
version = "0.5.8"

[dependencies.smallvec]
version = "1.3.0"

[dependencies.lazy_static]
version = "1.4.0"